# utk_ontology

./: .gitignore  Procfile  README.md  ontologies.py  pyproject.toml
htmlify/: htmlify.py
ontologies/: files.ttl  roles.ttl  works.ttl
ontology/: files
templates/: index.html  ontology.html
utilities/: query_role.py
