[tool.poetry]
name = "utk_ontology"
version = "0.1.0"
description = "An ontology for UTK things"
authors = ["Mark Baggett <mbagget1@utk.edu>"]

[tool.poetry.dependencies]
python = "3.10.4"
Flask = "^2.1.2"
flask_rdf = "^0.2.1"
rdflib = "^4.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
