[tool.poetry]
name = "utk_ontology"
version = "0.2.0"
description = "An ontology for UTK things"
authors = ["Mark Baggett <mbagget1@utk.edu>"]

[tool.poetry.dependencies]
python = "==3.11.2"
Flask = "^2.1.2"
flask_rdf = "^0.2.1"
rdflib = "^6.1.1"
gunicorn = "^20.1.0"
requests = "^2.28.1"
rdflib-jsonld = "^0.6.2"
arrow = "^1.2.2"
Bootstrap-Flask = "^2.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
